# aegis-input

./: .gitignore  README.md  agents.md  settings.gradle.kts
.github/: copilot-instructions.md
.github/actions/setup-signing/: action.yml
.github/agents/: release-developer.md
.github/workflows/: ci.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/aegisinput/app/: AegisInputActivities.kt  AegisInputApplication.kt  AegisInputService.kt  ImeCompatibilityPolicy.kt  InputConnectionWrapper.kt  KeyboardDemoState.kt
app/src/main/res/drawable/: ic_aegis_input.xml
app/src/main/res/values/: ids.xml  strings.xml  themes.xml
app/src/main/res/xml/: method.xml
app/src/test/kotlin/com/aegisinput/app/: ImeCompatibilityPolicyTest.kt  KeyboardDemoStateTest.kt
docs/: ARCHITECTURE.md  SETUP.md
engine-rime/: build.gradle.kts  consumer-rules.pro
engine-rime/src/main/cpp/: CMakeLists.txt  rime_jni.cpp  rime_jni.h
engine-rime/src/main/kotlin/com/aegisinput/engine/: FuzzyMatcher.kt  RimeBridge.kt  RimeSession.kt
engine-rime/src/main/kotlin/com/aegisinput/engine/data/: UserDictDao.kt  UserDictDatabase.kt
engine-rime/src/test/kotlin/com/aegisinput/engine/: FuzzyMatcherTest.kt
gradle/: libs.versions.toml
scripts/signing/: persist-credentials.sh
ui-compose/: build.gradle.kts
ui-compose/src/main/kotlin/com/aegisinput/ui/candidate/: CandidateBar.kt
ui-compose/src/main/kotlin/com/aegisinput/ui/keyboard/: DynamicHitbox.kt  KeyButton.kt  KeyboardLayout.kt  KeyboardView.kt
(+2 files in other folders)
